<resources>
    <string name="app_name">RU Cafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_order_donut">Add to Basket</string>
    <string name="add_ins">Add Ins</string>
    <string name="cream">cream</string>
    <string name="syrup">syrup</string>
    <string name="milk">milk</string>
    <string name="caramel">caramel</string>
    <string name="whipped_cream">whipped cream</string>
    <string name="remove_order">Remove Order</string>
    <string name="place_order_coffee">Add to Basket</string>
    <string name="subtotal_coffee">Subtotal</string>
    <string name="subtotal_donut">Subtotal</string>
    <string name="donut">Donut</string>
    <string name="coffee">coffee</string>
    <string name="store_orders">Store Orders</string>
    <string name="ordering_basket">Ordering Basket</string>
    <string name="place_order_orderingBasket">Place Order</string>
    <string name="delete_item_orderingBasket">Delete Item</string>
    <string name="glaze_donut">Glaze Donut</string>
    <string name="this_is_description_text">This is Description Text</string>
    <string name="this_is_header_text">This is Header Text</string>
    <string name="todo">TODO</string>
    <string name="quanitity">quanitity</string>
    <string name="donut_quantity">donut_quantity</string>
    <string name="textview">TextView</string>
    <string name="subtotal">subtotal</string>
    <string name="textview">TextView</string>
    <string-array name="coffeeSizes">
        <item>short</item>
        <item>tall</item>
        <item>grande</item>
        <item>venti</item>
    </string-array>
</resources>