<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donut">

   <Button
       android:id="@+id/donutOrder"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="16dp"
       android:text="@string/place_order_donut"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/donut_selection"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_marginTop="35dp"
       android:layout_marginBottom="150dp"
       app:layout_constraintBottom_toBottomOf="@id/donutOrder"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:itemCount="12"
       tools:listitem="@layout/recycler_view_item">

   </androidx.recyclerview.widget.RecyclerView>

   <TextView
       android:id="@+id/donut_subtotal"
       android:layout_width="80dp"
       android:layout_height="34dp"
       android:layout_marginBottom="70dp"
       android:text="@string/subtotal_donut"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/subtotalOutputDonut"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent" />

   <TextView
       android:id="@+id/subtotalOutputDonut"
       android:layout_width="74dp"
       android:layout_height="31dp"
       android:layout_marginBottom="70dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toEndOf="@+id/donut_subtotal" />

   <EditText
       android:id="@+id/donutQuantity"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="120dp"
       android:autofillHints=""
       android:ems="10"
       android:hint="@string/donut_quantity"
       android:inputType="number"
       android:minHeight="48dp"
       android:visibility="visible"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.5"
       app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>